--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World-Cup-page</title>
+
+
+    <!----------- Style Sheet ------------>
+    <!----------- Style Sheet ------------>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <header>
+            <div class="header-title-sec">
+                <h1>The Greatest show on the earth</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum exercitationem officia itaque cupiditate voluptates laudantium maxime veritatis? Dolore, facere possimus.</p>
+                <button>
+                    <a href="">Watch Live</a>
+                </button>
+            </div>
+            <div class="header-img-sec">
+                <img src="images/Banner Image.png" alt="">
+            </div>
+        </header>
+
+            
+
+    </main>
 </body>
 </html>
