--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World-Cup-page</title>
-
+    <!----------- Font Awesome ------------>
+    <!----------- Font Awesome ------------>
+    <script src="https://kit.fontawesome.com/f1b216bf58.js" crossorigin="anonymous"></script>
 
     <!----------- Style Sheet ------------>
     <!----------- Style Sheet ------------>
@@ -16,9 +18,11 @@
         <header>
             <div class="header-title-sec">
                 <h1>The Greatest show on the earth</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum exercitationem officia itaque cupiditate voluptates laudantium maxime veritatis? Dolore, facere possimus.</p>
-                <button>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum exercitationem officia itaque
+                    cupiditate voluptates laudantium maxime veritatis? Dolore, facere possimus.</p>
+                <button class="title-btn">
                     <a href="">Watch Live</a>
+                    <i class="fa-solid fa-chevron-right"></i>
                 </button>
             </div>
             <div class="header-img-sec">
@@ -26,8 +30,23 @@
             </div>
         </header>
 
-            
+        <middle class="middle-sec">
+            <div class="left-card">
+                <div class="left-card-box">
+                    <div class="card-button"><a target="_blank" href="https://www.google.com/">Upcoming Match</a></div>
+                    <div class="card-button"><a href="">Upcoming Match</a></div>
+                    <div class="card-button"><a href="">Upcoming Match</a></div>
+                </div>
+            </div>
+            <div class="right-card">
+                
+            </div>
+        </middle>
 
+        <footer>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur debitis alias suscipit eligendi vel
+            ratione architecto corporis eos fugiat veniam?
+        </footer>
     </main>
 </body>
 </html>
