--- a/index.html
+++ b/index.html
@@ -38,8 +38,160 @@
                     <div class="card-button"><a href="">Upcoming Match</a></div>
                 </div>
             </div>
-            <div class="right-card">
-                
+            <div class="right-card-parent">
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </middle>
 
