--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
         <middle class="middle-sec">
             <div class="left-card">
                 <div class="left-card-box">
-                    <div class="card-button"><a target="_blank" href="https://www.google.com/">Upcoming Match</a></div>
-                    <div class="card-button"><a href="">Upcoming Match</a></div>
-                    <div class="card-button"><a href="">Upcoming Match</a></div>
+                    <div class="card-button upcoming">
+                        <a target="_blank" href="upcoming.html">Upcoming Match</a>
+                    </div>
+                    <div class="card-button groups">
+                        <a target="_blank" href="groups.html">All Groups</a>
+                    </div>
+                    <div class="card-button blog">
+                        <a target="_blank" href="index.html">Blog</a>
+                    </div>
                 </div>
             </div>
             <div class="right-card-parent">
@@ -195,10 +201,27 @@
             </div>
         </middle>
 
-        <footer>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur debitis alias suscipit eligendi vel
-            ratione architecto corporis eos fugiat veniam?
-        </footer>
+        <section class="view-for-tablet">
+            <h3>View All</h3>
+        </section>
+
     </main>
+    <footer>
+        <h1>Goal</h1>
+        <hr>
+        <div class="footer-icon">
+            <p>Contact Us</p>
+            <p>Contact Us</p>
+            <p>Contact Us</p>
+            <p>Contact Us</p>
+            <p>Contact Us</p>
+            <p>Contact Us</p>
+        </div>
+        <div class="footer-social-icon3">
+            <a target="_blank" href="https://web.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a target="_blank" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+            <a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
