--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum exercitationem officia itaque
                     cupiditate voluptates laudantium maxime veritatis? Dolore, facere possimus.</p>
                 <button class="title-btn">
-                    <a href="">Watch Live</a>
+                    <a href="index.html">Watch Live</a>
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
             </div>
@@ -210,12 +210,12 @@
         <h1>Goal</h1>
         <hr>
         <div class="footer-icon">
-            <p>Contact Us</p>
-            <p>Contact Us</p>
-            <p>Contact Us</p>
-            <p>Contact Us</p>
-            <p>Contact Us</p>
-            <p>Contact Us</p>
+            <p><a href="">Contact Us</a></p>
+            <p><a href="">Contact Us</a></p>
+            <p><a href="">Contact Us</a></p>
+            <p><a href="">Contact Us</a></p>
+            <p><a href="">Contact Us</a></p>
+            <p><a href="">Contact Us</a></p>
         </div>
         <div class="footer-social-icon3">
             <a target="_blank" href="https://web.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
