--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </middle>
 
         <section class="view-for-tablet">
-            <h3>View All</h3>
+            <a href=""><h3>View All</h3></a>
         </section>
 
     </main>
