--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
 <body>
     <main>
         <header>
-                <div class="header-title-sec">
-                    <h1>The Greatest show on the earth</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum exercitationem officia itaque
-                        cupiditate voluptates laudantium maxime veritatis? Dolore, facere possimus.</p>
-                    <button class="title-btn">
-                        <a href="index.html">Watch Live</a>
-                        <i class="fa-solid fa-chevron-right"></i>
-                    </button>
-                </div>
-                <div class="header-img-sec">
-                    <img src="images/Banner Image.png" alt="">
-                </div>
+            <div class="header-title-sec">
+                <h1>The Greatest show on the earth</h1>
+                <p class="header-para">
+                    This is for header-para>>>>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!
+                </p>
+                <p class="for-ellips"  title="elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!">
+                    This is for ellips>>>>>>>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!
+                </p>
+                <button class="title-btn">
+                    <a href="index.html">Watch Live</a>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+            </div>
+            <div class="header-img-sec">
+                <img src="images/Banner Image.png" alt="">
+            </div>
         </header>
 
         <middle class="middle-sec">
@@ -202,7 +206,9 @@
         </middle>
 
         <section class="view-for-tablet">
-            <a href=""><h3>View All</h3></a>
+            <a href="">
+                <h3>View All</h3>
+            </a>
         </section>
 
     </main>
