--- a/index.html
+++ b/index.html
@@ -12,17 +12,32 @@
     <!----------- Style Sheet ------------>
     <!----------- Style Sheet ------------>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .blog {
+            background-color: red;
+            color: white
+        }
+        .blog:hover a {
+            color: white;
+        }
+    </style>    
 </head>
+
 <body>
     <main>
         <header>
             <div class="header-title-sec">
                 <h1>The Greatest show on the earth</h1>
                 <p class="header-para">
-                    This is for header-para>>>>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!
+                    Goal, the world’s largest football media platform, and Lega Serie A, one of the world’s top 5
+                    football leagues, with over 530 million fans worldwide, have today announced a global partnership to
+                    bring officially-licensed digital collectibles to football fans around the globe.
                 </p>
-                <p class="for-ellips"  title="elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!">
-                    This is for ellips>>>>>>>>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam dignissimos, modi odit temporibus corrupti qui quibusdam et, dolores saepe nobis quidem sapiente blanditiis dolor totam cupiditate, facilis nesciunt error? Quod!
+                <p class="for-ellips"
+                    title="Goal, the world’s largest football media platform, and Lega Serie A, one of the world’s top 5 football leagues, with over 530 million fans worldwide, have today announced a global partnership to bring officially-licensed digital collectibles to football fans around the globe.">
+                    Goal, the world’s largest football media platform, and Lega Serie A, one of the world’s top 5
+                    football leagues, with over 530 million fans worldwide, have today announced a global partnership to
+                    bring officially-licensed digital collectibles to football fans around the globe.
                 </p>
                 <button class="title-btn">
                     <a href="index.html">Watch Live</a>
@@ -37,26 +52,26 @@
         <middle class="middle-sec">
             <div class="left-card">
                 <div class="left-card-box">
+                    <div class="card-button blog">
+                        <a target="_blank" href="index.html">Blog</a>
+                    </div>
                     <div class="card-button upcoming">
                         <a target="_blank" href="upcoming.html">Upcoming Match</a>
                     </div>
                     <div class="card-button groups">
                         <a target="_blank" href="groups.html">All Groups</a>
                     </div>
-                    <div class="card-button blog">
-                        <a target="_blank" href="index.html">Blog</a>
-                    </div>
                 </div>
             </div>
             <div class="right-card-parent">
                 <div class="right-card">
                     <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
+                        <img src="images/Right-card-1.jpg" alt="">
                         <div class="card-info">
                             <div class="transfer">
                                 <a href="">Transfer</a>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
                             <div class="card-icon-sec">
                                 <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
                                 <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
@@ -68,12 +83,46 @@
                 </div>
                 <div class="right-card">
                     <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
+                        <img src="images/Right-card-2.jpg" alt="">
                         <div class="card-info">
                             <div class="transfer">
                                 <a href="">Transfer</a>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-3.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.jpg" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
                             <div class="card-icon-sec">
                                 <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
                                 <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
@@ -85,12 +134,46 @@
                 </div>
                 <div class="right-card">
                     <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
+                        <img src="images/Right-card-2.jpg" alt="">
                         <div class="card-info">
                             <div class="transfer">
                                 <a href="">Transfer</a>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-3.png" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="card-icon-sec">
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-one">
+                        <img src="images/Right-card-1.jpg" alt="">
+                        <div class="card-info">
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
                             <div class="card-icon-sec">
                                 <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
                                 <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
@@ -102,106 +185,40 @@
                 </div>
                 <div class="right-card">
                     <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
+                        <img src="images/Right-card-2.jpg" alt="">
                         <div class="card-info">
                             <div class="transfer">
                                 <a href="">Transfer</a>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
                             <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-card">
                     <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
+                        <img src="images/Right-card-3.png" alt="">
                         <div class="card-info">
                             <div class="transfer">
                                 <a href="">Transfer</a>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
+                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
                             <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
+                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
+                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
+                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfe</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
             </div>
         </middle>
 
@@ -217,11 +234,11 @@
         <hr>
         <div class="footer-icon">
             <p><a href="">Contact Us</a></p>
-            <p><a href="">Contact Us</a></p>
-            <p><a href="">Contact Us</a></p>
-            <p><a href="">Contact Us</a></p>
-            <p><a href="">Contact Us</a></p>
-            <p><a href="">Contact Us</a></p>
+            <p><a href="">Terms of Service</a></p>
+            <p><a href="">Privacy Policy</a></p>
+            <p><a href="">Privecy Settings</a></p>
+            <p><a href="">Goal App</a></p>
+            <p><a href="">Goal Live</a></p>
         </div>
         <div class="footer-social-icon3">
             <a target="_blank" href="https://web.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
