After responsive index

--- a/upcoming.html
+++ b/upcoming.html
@@ -63,161 +63,23 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="right-card-parent">
                 <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
                         <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
+                            <h3>Germany vs France</h3>
+                            <p>Aprial 01, 2023, 10 AM</p>
                         </div>
                     </div>
                 </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                
 
             </div>
         </middle>
