After responsive index

--- a/groups.html
+++ b/groups.html
@@ -65,159 +65,36 @@
                 </div>
             </div>
             <div class="right-card-parent">
+
+                <!-- .right-card>.right-card-group>h2.group-name+div.group-flags>.gorup-flag*4>img[src="images/Flag.png"]+h1{NameOfCountry} -->
+
+
                 <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
+                    <div class="right-card-group">
+
+
+                        <h2 class="group-name"></h2>
+                        <div class="group-flags">
+                            <div class="gorup-flag">
+                                <img src="images/Flag.png" alt="">
+                                <h1>NameOfCountry</h1>
                             </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
+                            <div class="gorup-flag">
+                                <img src="images/Flag.png" alt="">
+                                <h1>NameOfCountry</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/Flag.png" alt="">
+                                <h1>NameOfCountry</h1>
+                            </div>
+                            <div class="gorup-flag">
+                                <img src="images/Flag.png" alt="">
+                                <h1>NameOfCountry</h1>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-1.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 150.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 103K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 10H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-2.jpg" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Go for Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 1M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 125.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 953K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 8H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-card">
-                    <div class="right-card-one">
-                        <img src="images/Right-card-3.png" alt="">
-                        <div class="card-info">
-                            <div class="transfer">
-                                <a href="">Transfer</a>
-                            </div>
-                            <h3>Transfer Live Now: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="card-icon-sec">
-                                <p class="icon"><i class="fa-solid fa-thumbs-up"></i> 2.5M</p>
-                                <p class="icon"><i class="fa-solid fa-comments"></i> 198.3K</p>
-                                <p class="icon"><i class="fa-solid fa-share-from-square"></i> 335K</p>
-                                <p class="icon"><i class="fa-solid fa-clock"></i> 7H</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
 
 
             </div>
