--- a/upcoming.html
+++ b/upcoming.html
@@ -17,10 +17,11 @@
             background-color: red;
             color: white
         }
+
         .upcoming:hover a {
             color: white;
         }
-    </style>    
+    </style>
 </head>
 
 <body>
@@ -63,9 +64,9 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="right-card-parent">
+
+
                 <div class="right-card">
                     <div class="right-card-upcoming">
                         <div class="upcoming-img">
@@ -73,13 +74,158 @@
                             <p>vs</p>
                             <img src="images/Flag.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h3>Germany vs France</h3>
-                            <p>Aprial 01, 2023, 10 AM</p>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
                         </div>
                     </div>
                 </div>
-                
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-card">
+                    <div class="right-card-upcoming">
+                        <div class="upcoming-img">
+                            <img src="images/germany Flag.png" alt="">
+                            <p>vs</p>
+                            <img src="images/Flag.png" alt="">
+                        </div>
+                        <div class="upcoming-info">
+                            <h2>Germany vs France</h2>
+                            <p>Aprial 01, 2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                </div>
+
+  
+
 
             </div>
         </middle>
